--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"node-fetch": "3.2.10",
 		"prettier": "2.7.1",
 		"sass": "^1.55.0",
+		"styled-vanilla-extract": "^0.5.4",
 		"typescript": "4.8.4",
 		"vite": "^3.1.7",
 		"vite-tsconfig-paths": "3.5.0"
