--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
 		"sass": "^1.55.0",
 		"styled-vanilla-extract": "^0.5.4",
 		"typescript": "4.8.4",
-		"vite": "^3.1.7",
+		"vite": "^3.2.5",
 		"vite-tsconfig-paths": "3.5.0"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.10.0",
 		"locomotive-scroll": "^4.1.4"
 	}
 }
