--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 		"preview": "qwik build preview && vite preview --open",
 		"serve": "netlify dev",
 		"start": "vite --open --mode ssr",
-		"qwik": "qwik"
+		"qwik": "qwik",
+		"test": "vitest --run",
+		"test.watch": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
 		"@builder.io/partytown": "^0.7.0",
@@ -35,6 +38,7 @@
 		"@vanilla-extract/dynamic": "2.0.3",
 		"@vanilla-extract/integration": "6.0.1",
 		"@vanilla-extract/vite-plugin": "^3.7.0",
+		"@vitest/coverage-c8": "^0.29.2",
 		"eslint": "8.25.0",
 		"eslint-plugin-qwik": "0.11.0",
 		"gsap": "^3.11.4",
@@ -44,7 +48,8 @@
 		"styled-vanilla-extract": "^0.5.4",
 		"typescript": "4.8.4",
 		"vite": "^3.2.5",
-		"vite-tsconfig-paths": "3.5.0"
+		"vite-tsconfig-paths": "3.5.0",
+		"vitest": "^0.29.2"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.10.0",
