--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"devDependencies": {
 		"@builder.io/partytown": "^0.7.0",
-		"@builder.io/qwik": "^0.22.0",
+		"@builder.io/qwik": "0.16.1",
 		"@builder.io/qwik-city": "0.0.112",
 		"@netlify/vite-plugin-netlify-edge": "1.1.0",
 		"@types/eslint": "8.4.6",
