--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
 		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
-		"@builder.io/partytown": "^0.7.0",
-		"@builder.io/qwik": "0.16.1",
-		"@builder.io/qwik-city": "0.0.112",
+		"@builder.io/partytown": "^0.7.5",
+		"@builder.io/qwik": "0.22.1",
+		"@builder.io/qwik-city": "0.6.3",
 		"@netlify/vite-plugin-netlify-edge": "1.1.0",
-		"@types/eslint": "8.4.6",
+		"@types/eslint": "8.21.2",
 		"@types/locomotive-scroll": "^4.1.0",
 		"@types/node": "latest",
-		"@typescript-eslint/eslint-plugin": "5.40.0",
-		"@typescript-eslint/parser": "5.40.0",
+		"@typescript-eslint/eslint-plugin": "5.55.0",
+		"@typescript-eslint/parser": "5.55.0",
 		"@vitest/coverage-c8": "^0.29.2",
-		"eslint": "8.25.0",
-		"eslint-plugin-qwik": "0.11.0",
+		"eslint": "8.36.0",
+		"eslint-plugin-qwik": "0.22.1",
 		"gsap": "^3.11.4",
 		"node-fetch": "3.2.10",
-		"prettier": "2.7.1",
+		"prettier": "2.8.4",
 		"sass": "^1.55.0",
-		"typescript": "4.8.4",
-		"vite": "^3.2.5",
+		"typescript": "5.0.2",
+		"vite": "4.2.0",
 		"vite-tsconfig-paths": "3.5.0",
 		"vitest": "^0.29.2"
 	},
