--- a/package.json
+++ b/package.json
@@ -44,11 +44,9 @@
 		"typescript": "5.0.2",
 		"vite": "4.2.0",
 		"vite-tsconfig-paths": "3.5.0",
-		"vitest": "^0.29.2"
-	},
-	"dependencies": {
+		"vitest": "^0.29.2",
 		"@gasseklopper/qwik-components-mmo": "^0.0.8",
-		"@supabase/supabase-js": "^2.10.0",
+		"@supabase/supabase-js": "^2.11.0",
 		"dotenv": "^16.0.3",
 		"dotenv-expand": "^10.0.0",
 		"locomotive-scroll": "^4.1.4"
