delte slider hero

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
-@netlify:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${VITE_AUTH_TOKEN_GITHUB_PACKAGES_READ}
+@gasseklopper:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=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
+# @netlify:registry=https://npm.pkg.github.com
+# //npm.pkg.github.com/:_authToken=${VITE_AUTH_TOKEN_GITHUB_PACKAGES_READ}
