--- a/package.json
+++ b/package.json
@@ -28,27 +28,27 @@
 		"@builder.io/partytown": "^0.7.5",
 		"@builder.io/qwik": "0.22.1",
 		"@builder.io/qwik-city": "0.6.3",
+		"@gasseklopper/qwik-components-mmo": "^0.0.8",
 		"@netlify/vite-plugin-netlify-edge": "1.1.2",
+		"@supabase/supabase-js": "^2.11.0",
 		"@types/eslint": "8.21.2",
 		"@types/locomotive-scroll": "^4.1.0",
 		"@types/node": "latest",
 		"@typescript-eslint/eslint-plugin": "5.55.0",
 		"@typescript-eslint/parser": "5.55.0",
 		"@vitest/coverage-c8": "^0.29.2",
+		"dotenv": "^16.0.3",
+		"dotenv-expand": "^10.0.0",
 		"eslint": "8.36.0",
 		"eslint-plugin-qwik": "0.22.1",
-		"gsap": "^3.11.4",
+		"gsap": "^3.11.5",
+		"locomotive-scroll": "^4.1.4",
 		"node-fetch": "3.2.10",
 		"prettier": "2.8.4",
 		"sass": "^1.59.3",
 		"typescript": "5.0.2",
 		"vite": "4.2.0",
 		"vite-tsconfig-paths": "3.5.0",
-		"vitest": "^0.29.2",
-		"@gasseklopper/qwik-components-mmo": "^0.0.8",
-		"@supabase/supabase-js": "^2.11.0",
-		"dotenv": "^16.0.3",
-		"dotenv-expand": "^10.0.0",
-		"locomotive-scroll": "^4.1.4"
+		"vitest": "^0.29.2"
 	}
 }
