--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@netlify/vite-plugin-netlify-edge": "1.1.2",
 		"@supabase/supabase-js": "^2.11.0",
 		"@types/eslint": "8.21.2",
+		"@types/gsap": "^3.0.0",
 		"@types/locomotive-scroll": "^4.1.0",
 		"@types/node": "latest",
 		"@typescript-eslint/eslint-plugin": "5.55.0",
