feat: added bodyscroll prototyp

--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
 	},
 	"devDependencies": {
 		"@builder.io/partytown": "^0.7.5",
-		"@builder.io/qwik": "0.22.1",
-		"@builder.io/qwik-city": "0.6.3",
+		"@builder.io/qwik": "1.1.4",
+		"@builder.io/qwik-city": "1.1.4",
 		"@gasseklopper/qwik-components-mmo": "^0.0.8",
 		"@netlify/vite-plugin-netlify-edge": "1.1.2",
 		"@supabase/supabase-js": "^2.11.0",
+		"@types/body-scroll-lock": "^3.1.0",
 		"@types/eslint": "8.21.2",
 		"@types/gsap": "^3.0.0",
 		"@types/locomotive-scroll": "^4.1.0",
@@ -38,6 +39,7 @@
 		"@typescript-eslint/eslint-plugin": "5.55.0",
 		"@typescript-eslint/parser": "5.55.0",
 		"@vitest/coverage-c8": "^0.29.2",
+		"body-scroll-lock": "^4.0.0-beta.0",
 		"dotenv": "^16.0.3",
 		"dotenv-expand": "^10.0.0",
 		"eslint": "8.36.0",
