--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,15 @@
 publish = "dist"
 command = "npm run build"
 
+[[edge_functions]]
+path = "/*"
+function = "entry.netlify-edge"
+
+[dev]
+framework = "#static"
+
+
+[[headers]]
+  for = "/assets/images/photography/black/*"
+[headers.values]
+  Cache-Control = "public, max-age=60"
