--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-# @gasseklopper:registry=https://npm.pkg.github.com
+@gasseklopper:registry=https://npm.pkg.github.com
 # //npm.pkg.github.com/:_authToken=${VITE_AUTH_TOKEN_GITHUB_PACKAGES_READ}
-@netlify:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${VITE_AUTH_TOKEN_GITHUB_PACKAGES_READ}
+# @netlify:registry=https://npm.pkg.github.com
+# //npm.pkg.github.com/:_authToken=${VITE_AUTH_TOKEN_GITHUB_PACKAGES_READ}
