--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
 [build]
 publish = "dist"
 command = "npm run build"
+
+[[edge_functions]]
+path = "/*"
+function = "entry.netlify-edge"
+[dev]
+framework = "#static"
+[[headers]]
+  for = "/assets/images/photography/black/*"
+[headers.values]
+  Cache-Control = "public, max-age=60"
