--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
 		"vite": "4.3.8",
 		"vite-tsconfig-paths": "4.2.0",
 		"vitest": "^0.31.1"
+	},
+	"dependencies": {
+		"@modular-forms/qwik": "^0.20.0",
+		"clsx": "^1.2.1"
 	}
 }
