feat: add storybook

--- a/package.json
+++ b/package.json
@@ -1,63 +1,74 @@
 {
-	"name": "my-qwik-docs-starter",
-	"description": "Documentation site starter",
-	"engines": {
-		"node": ">=15.0.0"
-	},
-	"private": true,
-	"scripts": {
-		"build": "qwik build",
-		"build.client": "vite build",
-		"build.preview": "vite build --ssr src/entry.preview.tsx",
-		"build.server": "vite build -c adapters/netlify-edge/vite.config.ts",
-		"build.types": "tsc --incremental --noEmit",
-		"coverage": "vitest run --coverage",
-		"deploy": "netlify deploy --build",
-		"dev": "vite --mode ssr",
-		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-		"fmt": "prettier --write .",
-		"fmt.check": "prettier --check .",
-		"lint": "eslint \"src/**/*.ts*\"",
-		"preview": "qwik build preview && vite preview --open",
-		"serve": "netlify dev",
-		"start": "vite --open --mode ssr",
-		"test": "vitest --run",
-		"test.watch": "vitest",
-		"qwik": "qwik"
-	},
-	"devDependencies": {
-		"@builder.io/partytown": "^0.8.1",
-		"@builder.io/qwik": "1.2.17",
-		"@builder.io/qwik-city": "1.2.17",
-		"@netlify/edge-functions": "^2.0.0",
-		"@netlify/vite-plugin-netlify-edge": "1.1.2",
-		"@supabase/supabase-js": "^2.11.0",
-		"@types/body-scroll-lock": "^3.1.0",
-		"@types/eslint": "8.44.0",
-		"@types/gsap": "^3.0.0",
-		"@types/locomotive-scroll": "^4.1.0",
-		"@types/node": "latest",
-		"@typescript-eslint/eslint-plugin": "5.59.6",
-		"@typescript-eslint/parser": "5.59.6",
-		"@vitest/coverage-c8": "^0.33.0",
-		"body-scroll-lock": "^4.0.0-beta.0",
-		"dotenv": "^16.0.3",
-		"dotenv-expand": "^10.0.0",
-		"eslint": "8.46.0",
-		"eslint-plugin-qwik": "1.2.17",
-		"gsap": "^3.11.5",
-		"locomotive-scroll": "^4.1.4",
-		"netlify-cli": "^15.0.0",
-		"node-fetch": "3.3.1",
-		"prettier": "2.8.8",
-		"sass": "^1.62.1",
-		"typescript": "5.2.2",
-		"vite": "4.3.8",
-		"vite-tsconfig-paths": "4.2.0",
-		"vitest": "^0.31.1"
-	},
-	"dependencies": {
-		"@modular-forms/qwik": "^0.20.0",
-		"clsx": "^1.2.1"
-	}
+  "name": "my-qwik-docs-starter",
+  "description": "Documentation site starter",
+  "engines": {
+    "node": ">=15.0.0"
+  },
+  "private": true,
+  "scripts": {
+    "build": "qwik build",
+    "build-storybook": "storybook build",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/netlify-edge/vite.config.ts",
+    "build.types": "tsc --incremental --noEmit",
+    "coverage": "vitest run --coverage",
+    "deploy": "netlify deploy --build",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check .",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "preview": "qwik build preview && vite preview --open",
+    "serve": "netlify dev",
+    "start": "vite --open --mode ssr",
+    "storybook": "storybook dev -p 6006",
+    "test": "vitest --run",
+    "test.watch": "vitest",
+    "qwik": "qwik"
+  },
+  "devDependencies": {
+    "@builder.io/partytown": "^0.8.1",
+    "@builder.io/qwik": "1.2.17",
+    "@builder.io/qwik-city": "1.2.17",
+    "@netlify/edge-functions": "^2.0.0",
+    "@netlify/vite-plugin-netlify-edge": "1.1.2",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/builder-vite": "^7.4.6",
+    "@storybook/html": "^7.4.6",
+    "@storybook/html-vite": "^7.4.6",
+    "@supabase/supabase-js": "^2.11.0",
+    "@types/body-scroll-lock": "^3.1.0",
+    "@types/eslint": "8.44.0",
+    "@types/gsap": "^3.0.0",
+    "@types/locomotive-scroll": "^4.1.0",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
+    "@vitest/coverage-c8": "^0.33.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
+    "eslint": "8.46.0",
+    "eslint-plugin-qwik": "1.2.17",
+    "gsap": "^3.11.5",
+    "locomotive-scroll": "^4.1.4",
+    "netlify-cli": "^15.0.0",
+    "node-fetch": "3.3.1",
+    "prettier": "2.8.8",
+    "sass": "^1.62.1",
+    "storybook": "^7.4.6",
+    "storybook-framework-qwik": "^0.2.4",
+    "typescript": "5.2.2",
+    "vite": "4.3.8",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "^0.31.1"
+  },
+  "dependencies": {
+    "@modular-forms/qwik": "^0.20.0",
+    "clsx": "^1.2.1",
+    "storybook-addon-data-theme-switcher": "^0.1.7"
+  }
 }
