--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
 publish = "dist"
-command = "npm run build"
-
-publish = "dist/storybook-static"
-command = "build-storybook"
+command = "npm run build-storybook"
 
 [[edge_functions]]
 path = "/*"
