--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-publish = "storybook-static"
-command = "npm run build-storybook"
+publish = "dist"
+command = "npm run build && npm run build-storybook"
 
 [[edge_functions]]
 path = "/*"
