--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "dist"
-command = "npm run build && npm run build-storybook"
+command = "npm run build && npm run build-storybook -- -o dist/storybook"
 
 [[edge_functions]]
 path = "/*"
