--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "storybook": "^7.4.6",
     "storybook-framework-qwik": "^0.2.4",
     "typescript": "5.2.2",
-    "vite": "4.3.8",
+    "vite": "^4.5.3",
     "vite-tsconfig-paths": "4.2.0",
     "vitest": "^0.31.1"
   },
