--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.8.1",
-    "@builder.io/qwik": "1.2.17",
-    "@builder.io/qwik-city": "1.2.17",
+    "@builder.io/qwik": "^1.5.5",
+    "@builder.io/qwik-city": "^1.5.5",
     "@netlify/edge-functions": "^2.0.0",
     "@netlify/vite-plugin-netlify-edge": "1.1.2",
     "@storybook/addon-essentials": "^7.4.6",
@@ -45,30 +45,31 @@
     "@storybook/html-vite": "^7.4.6",
     "@supabase/supabase-js": "^2.11.0",
     "@types/body-scroll-lock": "^3.1.0",
-    "@types/eslint": "8.44.0",
+    "@types/eslint": "^8.56.10",
     "@types/gsap": "^3.0.0",
     "@types/locomotive-scroll": "^4.1.0",
-    "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "5.59.6",
-    "@typescript-eslint/parser": "5.59.6",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-c8": "^0.33.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
-    "eslint": "8.46.0",
-    "eslint-plugin-qwik": "1.2.17",
+    "eslint": "^8.57.0",
+    "eslint-plugin-qwik": "^1.5.5",
     "gsap": "^3.11.5",
     "locomotive-scroll": "^4.1.4",
     "netlify-cli": "^15.0.0",
     "node-fetch": "3.3.1",
-    "prettier": "2.8.8",
+    "prettier": "^3.2.5",
     "sass": "^1.62.1",
     "storybook": "^7.4.6",
     "storybook-framework-qwik": "^0.2.4",
-    "typescript": "5.2.2",
-    "vite": "^4.5.3",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "^0.31.1"
+    "typescript": "5.4.5",
+    "vite": "^5.2.10",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.31.1",
+    "undici": "*"
   },
   "dependencies": {
     "@modular-forms/qwik": "^0.20.0",
