--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,5 @@ framework = "#static"
   Cache-Control = "public, max-age=60"
 [[plugins]]
   package = "@netlify/plugin-lighthouse"
+  [plugins.inputs.settings]
+    preset = "desktop" # Optionally run Lighthouse using a desktop configuration
