add footer fixed option

--- a/src/config/siteConfig.json
+++ b/src/config/siteConfig.json
@@ -20,6 +20,7 @@
     "logo_text": "Markus Morley"
   },
   "footer_info": {
+    "isFixed": false,
     "floating_shape": "",
     "address": {
       "name": "",
