--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # Build
+/build
 /dist
 /lib
 /lib-types
@@ -8,6 +11,7 @@
 node_modules
 
 # Envoirement
+.env*.local
 .env
 .npmrc
 
@@ -27,6 +31,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# testing
+/coverage
+
 # Editor
 .vscode/*
 !.vscode/extensions.json
@@ -37,6 +44,7 @@ lerna-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.pem
 
 # Yarn
 .yarn/*
@@ -51,3 +59,6 @@ netlify/edge-functions/entry.netlify-edge/@qwik-city-plan.js
 netlify/edge-functions/entry.netlify-edge/@qwik-city-static-paths.js
 netlify/edge-functions/entry.netlify-edge/entry.netlify-edge.js
 netlify/edge-functions/entry.netlify-edge/entry.ssr.js
+
+# Typescript
+*.tsbuildinfo
