feat: adjust alot of basic cleanup writing yatzee tests startup

--- a/package.json
+++ b/package.json
@@ -1,81 +1,83 @@
 {
-	"name": "my-qwik-docs-starter",
-	"description": "Documentation site starter",
-	"engines": {
-		"node": "^18.17.0 || ^20.3.0 || >=21.0.0"
-	},
-	"engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
-	"trustedDependencies": [
-		"sharp"
-	],
-	"private": true,
-	"trustedDependencies-annotation": "Needed for bun to allow running install scripts",
-	"type": "module",
-	"scripts": {
-		"build": "qwik build",
-		"build-storybook": "storybook build -- -o public/storybook",
-		"build.client": "vite build",
-		"build.preview": "vite build --ssr src/entry.preview.tsx",
-		"build.server": "vite build -c adapters/netlify-edge/vite.config.ts",
-		"build.types": "tsc --incremental --noEmit",
-		"coverage": "vitest run --coverage",
-		"deploy": "netlify deploy --build",
-		"dev": "vite --mode ssr",
-		"dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-		"fmt": "prettier --write .",
-		"fmt.check": "prettier --check .",
-		"lint": "eslint \"src/**/*.ts*\"",
-		"preview": "qwik build preview && vite preview --open",
-		"serve": "netlify dev",
-		"start": "vite --open --mode ssr",
-		"storybook": "storybook dev -p 6006",
-		"test": "vitest --run",
-		"test.watch": "vitest",
-		"qwik": "qwik"
-	},
-	"devDependencies": {
-		"@builder.io/partytown": "^0.8.1",
-		"@builder.io/qwik": "^1.11.0",
-		"@builder.io/qwik-city": "^1.11.0",
-		"@modular-forms/qwik": "^0.20.0",
-		"@netlify/edge-functions": "^2.0.0",
-		"@netlify/plugin-lighthouse": "^6.0.0",
-		"@netlify/vite-plugin-netlify-edge": "1.1.2",
-		"@qwikest/icons": "^0.0.13",
-		"@storybook/addon-essentials": "^7.4.6",
-		"@storybook/addon-links": "^7.4.6",
-		"@storybook/blocks": "^7.4.6",
-		"@storybook/builder-vite": "^7.4.6",
-		"@storybook/html": "^7.4.6",
-		"@storybook/html-vite": "^7.4.6",
-		"@supabase/supabase-js": "^2.43.4",
-		"@types/body-scroll-lock": "^3.1.0",
-		"@types/eslint": "^8.56.10",
-		"@types/gsap": "^3.0.0",
-		"@types/locomotive-scroll": "^4.1.0",
-		"@types/node": "^20.12.7",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
-		"@vitest/coverage-c8": "^0.33.0",
-		"body-scroll-lock": "^4.0.0-beta.0",
-		"clsx": "^1.2.1",
-		"dotenv": "^16.0.3",
-		"dotenv-expand": "^10.0.0",
-		"eslint": "^8.57.0",
-		"eslint-plugin-qwik": "^1.5.5",
-		"gsap": "^3.11.5",
-		"locomotive-scroll": "^4.1.4",
-		"netlify-cli": "^15.0.0",
-		"node-fetch": "3.3.1",
-		"prettier": "^3.2.5",
-		"sass": "^1.62.1",
-		"storybook": "^7.4.6",
-		"storybook-addon-data-theme-switcher": "^0.1.7",
-		"storybook-framework-qwik": "^0.2.4",
-		"typescript": "5.4.5",
-		"undici": "*",
-		"vite": "^5.2.10",
-		"vite-tsconfig-paths": "^4.2.1",
-		"vitest": "^0.31.1"
-	}
+  "name": "my-qwik-docs-starter",
+  "description": "Documentation site starter",
+  "engines": {
+    "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
+  },
+  "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
+  "trustedDependencies": [
+    "sharp"
+  ],
+  "private": true,
+  "trustedDependencies-annotation": "Needed for bun to allow running install scripts",
+  "type": "module",
+  "scripts": {
+    "build": "qwik build",
+    "build-storybook": "storybook build -- -o public/storybook",
+    "build.client": "vite build",
+    "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/netlify-edge/vite.config.ts",
+    "build.types": "tsc --incremental --noEmit",
+    "coverage": "vitest run --coverage",
+    "deploy": "netlify deploy --build",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check .",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "preview": "qwik build preview && vite preview --open",
+    "serve": "netlify dev",
+    "start": "vite --open --mode ssr",
+    "storybook": "storybook dev -p 6006",
+    "test": "vitest --run",
+    "test.unit": "vitest components",
+    "test.unit.ui": "vitest --ui components",
+    "test.watch": "vitest",
+    "qwik": "qwik"
+  },
+  "devDependencies": {
+    "@builder.io/partytown": "^0.8.1",
+    "@builder.io/qwik": "^1.11.0",
+    "@builder.io/qwik-city": "^1.11.0",
+    "@modular-forms/qwik": "^0.20.0",
+    "@netlify/edge-functions": "^2.0.0",
+    "@netlify/plugin-lighthouse": "^6.0.0",
+    "@netlify/vite-plugin-netlify-edge": "1.1.2",
+    "@qwikest/icons": "^0.0.13",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/builder-vite": "^7.4.6",
+    "@storybook/html": "^7.4.6",
+    "@storybook/html-vite": "^7.4.6",
+    "@supabase/supabase-js": "^2.43.4",
+    "@types/eslint": "^8.56.10",
+    "@types/gsap": "^3.0.0",
+    "@types/locomotive-scroll": "^4.1.0",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/ui": "^0.34.6",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-qwik": "^1.5.5",
+    "gsap": "^3.11.5",
+    "locomotive-scroll": "^4.1.4",
+    "netlify-cli": "^15.0.0",
+    "node-fetch": "3.3.1",
+    "prettier": "^3.2.5",
+    "sass": "^1.62.1",
+    "storybook": "^7.4.6",
+    "storybook-addon-data-theme-switcher": "^0.1.7",
+    "storybook-framework-qwik": "^0.2.4",
+    "typescript": "5.4.5",
+    "undici": "*",
+    "vite": "^5.2.10",
+    "vite-tsconfig-paths": "^4.2.1",
+    "vitest": "^0.34.6"
+  }
 }
