--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 		"skipLibCheck": true,
 		"incremental": true,
 		"isolatedModules": true,
+		"checkJs": true,
 		"types": ["node", "vite/client"],
 		"paths": {
 			"~/*": ["./src/*"]
