--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"target": "ES2017",
-		"module": "ES2020",
+		"target": "ES6",
+		"module": "commonjs",
 		"lib": ["es2020", "DOM", "WebWorker", "DOM.Iterable"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "@builder.io/qwik",
@@ -12,12 +12,13 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"incremental": true,
+		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
-		"checkJs": true,
 		"types": ["node", "vite/client"],
 		"paths": {
 			"~/*": ["./src/*"]
 		}
 	},
-	"include": ["src"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist"]
 }
