--- a/package.json
+++ b/package.json
@@ -37,19 +37,20 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.8.1",
-    "@builder.io/qwik": "^1.11.0",
-    "@builder.io/qwik-city": "^1.11.0",
+    "@builder.io/qwik": "^1.2.15",
+    "@builder.io/qwik-city": "^1.2.15",
     "@modular-forms/qwik": "^0.20.0",
     "@netlify/edge-functions": "^2.0.0",
-    "@netlify/plugin-lighthouse": "^6.0.0",
+    "@netlify/plugin-lighthouse": "^3.0.0",
     "@netlify/vite-plugin-netlify-edge": "1.1.2",
+    "@qwik-ui/headless": "^0.6.6",
     "@qwikest/icons": "^0.0.13",
-    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-links": "^7.4.6",
-    "@storybook/blocks": "^7.4.6",
-    "@storybook/builder-vite": "^7.4.6",
-    "@storybook/html": "^7.4.6",
-    "@storybook/html-vite": "^7.4.6",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/builder-vite": "^8.6.12",
+    "@storybook/html": "^8.6.12",
+    "@storybook/html-vite": "^8.6.12",
     "@supabase/supabase-js": "^2.43.4",
     "@types/eslint": "^8.56.10",
     "@types/gsap": "^3.0.0",
@@ -58,7 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-c8": "^0.33.0",
-    "@vitest/ui": "^0.34.6",
+    "@vitest/ui": "^3.1.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
@@ -67,11 +68,11 @@
     "eslint-plugin-qwik": "^1.5.5",
     "gsap": "^3.11.5",
     "locomotive-scroll": "^4.1.4",
-    "netlify-cli": "^15.0.0",
+    "netlify-cli": "^20.0.0",
     "node-fetch": "3.3.1",
     "prettier": "^3.2.5",
     "sass": "^1.62.1",
-    "storybook": "^7.4.6",
+    "storybook": "^8.6.12",
     "storybook-addon-data-theme-switcher": "^0.1.7",
     "storybook-framework-qwik": "^0.2.4",
     "typescript": "5.4.5",
