--- a/package.json
+++ b/package.json
@@ -36,48 +36,29 @@
 		"qwik": "qwik"
 	},
 	"devDependencies": {
-		"@builder.io/partytown": "^0.10.3",
 		"@builder.io/qwik": "^1.13.0",
-		"@builder.io/qwik-city": "^1.2.15",
-		"@modular-forms/qwik": "^0.22.0",
-		"@netlify/edge-functions": "^2.11.1",
+		"@builder.io/qwik-city": "^1.13.0",
+		"@netlify/edge-functions": "^2.0.0",
 		"@netlify/plugin-lighthouse": "^3.0.0",
 		"@netlify/vite-plugin-netlify-edge": "1.1.3",
 		"@qwik-ui/headless": "^0.6.6",
-		"@qwikest/icons": "^0.0.13",
-		"@storybook/addon-essentials": "^8.6.12",
-		"@storybook/addon-links": "^8.6.12",
-		"@storybook/blocks": "^8.6.12",
-		"@storybook/builder-vite": "^8.6.12",
-		"@storybook/html": "^8.6.12",
-		"@storybook/html-vite": "^8.6.12",
 		"@supabase/supabase-js": "^2.49.4",
-		"@types/eslint": "^9.6.1",
+		"@types/eslint": "8.56.10",
+		"@types/node": "20.14.11",
 		"@types/gsap": "^3.0.0",
 		"@types/locomotive-scroll": "^4.1.4",
-		"@types/node": "^22.14.1",
-		"@typescript-eslint/eslint-plugin": "^8.30.1",
-		"@typescript-eslint/parser": "^8.30.1",
-		"@vitest/coverage-c8": "^0.33.0",
-		"@vitest/ui": "^3.1.1",
-		"clsx": "^2.1.1",
-		"dotenv": "^16.5.0",
-		"dotenv-expand": "^12.0.1",
-		"eslint": "^9.24.0",
+		"@typescript-eslint/eslint-plugin": "7.16.1",
+		"@typescript-eslint/parser": "7.16.1",
+		"eslint": "8.57.0",
 		"eslint-plugin-qwik": "^1.13.0",
 		"gsap": "^3.12.7",
 		"locomotive-scroll": "^4.1.4",
-		"netlify-cli": "^16.1.0",
-		"node-fetch": "3.3.2",
-		"prettier": "^3.5.3",
+		"netlify-cli": "^15.0.0",
+		"prettier": "3.3.3",
 		"sass": "^1.86.3",
-		"storybook": "^8.6.12",
-		"storybook-addon-data-theme-switcher": "^1.0.1",
-		"storybook-framework-qwik": "^0.2.4",
-		"typescript": "5.8.3",
+		"typescript": "5.4.5",
 		"undici": "*",
-		"vite": "^6.3.0",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.1.1"
+		"vite": "5.3.5",
+		"vite-tsconfig-paths": "^4.2.1"
 	}
 }
