--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"qwik": "qwik"
 	},
 	"devDependencies": {
+		"@builder.io/partytown": "^0.10.3",
 		"@builder.io/qwik": "^1.13.0",
 		"@builder.io/qwik-city": "^1.13.0",
 		"@netlify/edge-functions": "^2.0.0",
@@ -44,11 +45,12 @@
 		"@qwik-ui/headless": "^0.6.6",
 		"@supabase/supabase-js": "^2.49.4",
 		"@types/eslint": "8.56.10",
-		"@types/node": "20.14.11",
 		"@types/gsap": "^3.0.0",
 		"@types/locomotive-scroll": "^4.1.4",
+		"@types/node": "20.14.11",
 		"@typescript-eslint/eslint-plugin": "7.16.1",
 		"@typescript-eslint/parser": "7.16.1",
+		"@vitest/ui": "^0.34.6",
 		"eslint": "8.57.0",
 		"eslint-plugin-qwik": "^1.13.0",
 		"gsap": "^3.12.7",
@@ -59,6 +61,7 @@
 		"typescript": "5.4.5",
 		"undici": "*",
 		"vite": "5.3.5",
-		"vite-tsconfig-paths": "^4.2.1"
+		"vite-tsconfig-paths": "^4.2.1",
+		"vitest": "^0.34.6"
 	}
 }
