--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
 	},
 	"devDependencies": {
 		"@builder.io/partytown": "^0.10.3",
-		"@builder.io/qwik": "^1.13.0",
-		"@builder.io/qwik-city": "^1.13.0",
+		"@builder.io/qwik": "^1.14.1",
+		"@builder.io/qwik-city": "^1.14.1",
+		"@eslint/js": "latest",
 		"@netlify/edge-functions": "^2.0.0",
 		"@netlify/plugin-lighthouse": "^6.0.1",
 		"@netlify/vite-plugin-netlify-edge": "1.1.3",
@@ -49,21 +50,21 @@
 		"@types/gsap": "^3.0.0",
 		"@types/locomotive-scroll": "^4.1.4",
 		"@types/node": "20.14.11",
-		"@typescript-eslint/eslint-plugin": "7.16.1",
-		"@typescript-eslint/parser": "7.16.1",
 		"@vitest/ui": "^0.34.6",
-		"eslint": "8.57.0",
-		"eslint-plugin-qwik": "^1.13.0",
+		"eslint": "9.25.1",
+		"eslint-plugin-qwik": "^1.14.1",
+		"globals": "16.0.0",
 		"gsap": "^3.12.7",
 		"locomotive-scroll": "^4.1.4",
 		"netlify-cli": "^15.0.0",
 		"prettier": "3.3.3",
-		"sass": "^1.86.3",
+		"sass": "^1.89.2",
+		"storybook-framework-qwik": "^0.4.2",
 		"typescript": "5.4.5",
+		"typescript-eslint": "8.26.1",
 		"undici": "*",
 		"vite": "5.3.5",
 		"vite-tsconfig-paths": "^4.2.1",
-		"vitest": "^0.34.6",
-		"storybook-framework-qwik": "^0.4.2"
+		"vitest": "^0.34.6"
 	}
 }
