--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,24 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"target": "ES6",
-		"module": "commonjs",
-		"lib": ["es2020", "DOM", "WebWorker", "DOM.Iterable"],
+		"target": "ES2017",
+		"module": "ES2022",
+		"lib": ["es2022", "DOM", "WebWorker", "DOM.Iterable"],
 		"jsx": "react-jsx",
 		"jsxImportSource": "@builder.io/qwik",
 		"strict": true,
+		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
-		"moduleResolution": "node",
+		"moduleResolution": "Bundler",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"incremental": true,
-		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
-		"types": ["node", "vite/client"],
+		"outDir": "tmp",
+		"noEmit": true,
 		"paths": {
 			"~/*": ["./src/*"]
 		}
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist"]
+	"include": ["src", "./*.d.ts", "./*.config.ts"]
 }
